# ovsdb

./: .gitreview  .zuul.yaml  Cargo.toml  README.md
client/: Cargo.toml  README.md
client/examples/: ovsdb-monitor.rs
client/src/: lib.rs  rpc.rs  schema.rs
client/src/transports/: codec.rs  ipc.rs  mod.rs  tcp.rs
derive/: Cargo.toml  README.md
derive/examples/: attribute.rs  derive.rs
derive/src/: lib.rs
playbooks/: clippy.yml  pre.yml  test.yml
schema/: Cargo.toml  README.md
schema/src/: lib.rs
schema/tests/: integration.rs
