[package]
name = "ovsdb-client"
version = "0.0.1"
edition = "2021"
description = "Async Rust client for the Open vSwitch Database Protocol with monitoring support"
license = "Apache-2.0"
keywords = ["ovsdb", "ovs", "openvswitch", "database", "networking"]
categories = ["database", "network-programming", "api-bindings", "asynchronous"]
repository = "https://review.vexxhost.dev/plugins/gitiles/ovsdb"

[dependencies]
bytes = "1.10.1"
futures-util = { version = "0.3.31" }
jsonrpsee = { version = "0.24.8", features = ["async-client", "client-core", "macros"] }
serde = "1.0.218"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["net", "rt-multi-thread"] }
tokio-util = { version = "0.7.13", features = ["codec"] }

[dev-dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
