[package]
name = "ovsdb-schema"
version = "0.0.1"
edition = "2021"
description = "Rust types and serialization for the Open vSwitch Database Management Protocol (OVSDB)"
license = "Apache-2.0"
keywords = ["ovsdb", "ovs", "openvswitch", "database", "serialization"]
categories = ["database", "network-programming", "api-bindings"]
repository = "https://review.vexxhost.dev/plugins/gitiles/ovsdb"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.15.1", features = ["serde"] }

[dev-dependencies]
ovsdb-derive = { path = "../derive" }
